instructions.Instructions.scala.error
Erreur de compilation :
Instructions:1: error: not found: value adroite
baisseBrosse(); avance(); avance(); droite(); avance(); avance(); droite(); avance(); avance(); droite(); avance(); leveBrosse(); adroite(); avance(); 
                                                                                                                                  ^